--- a/Week 4/Assignment/MyReconciler.html
+++ b/Week 4/Assignment/MyReconciler.html
@@ -15,9 +15,9 @@
         todoItem.parentNode.removeChild(todoItem);
 
         //also delete from the todoState
-        // this.todoState = this.todoState.filter((todo) => {
-        //   return todo.id !== id;
-        // });
+        this.todoState = this.todoState.filter((todo) => {
+          return todo.id !== id;
+        });
       }
 
       //this func same as previous html
@@ -50,6 +50,8 @@
         //attaching id to the li tag
         todoItem.setAttribute('id', newTodo.id);
         todoList.appendChild(todoItem);
+
+        this.todoState.push(newTodo);
       }
 
       //this func updates the oldTodo if it already exists
@@ -67,12 +69,12 @@
         element.children[1].innerHTML = ': ' + newTodo.desc + ' ';
 
         //changing only that todo which is updated in the todoState
-        // this.todoState = this.todoState.map((todo) => {
-        //   if (todo.id === newTodo.id) {
-        //     return newTodo;
-        //   }
-        //   return todo;
-        // });
+        this.todoState = this.todoState.map((todo) => {
+          if (todo.id === newTodo.id) {
+            return newTodo;
+          }
+          return todo;
+        });
       }
 
       //main func - which updates only the changed DOM elements
@@ -153,7 +155,7 @@
           console.log('updated 1 item in state!');
           updateTodo(updated[i]);
         }
-        this.todoState = newTodos;
+        // this.todoState = newTodos;
         console.log('currentState-->', this.todoState);
       }
 
